Changed collection from ArrayList to ArrayDeque.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/conditional_testing@37010 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c